# poor-mans-data-platform

./: pyproject.toml  readme.md
examples/: publish_event_example.py  simple_producer_example.py
src/producer/: __init__.py  event.py  simple_producer.py
