[project]
name = "poor-mans-data-platform"
version = "0.1.0"
description = "A lightweight event-driven data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
